--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "html-react-parser": "^5.1.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
+    "styled-components": "^6.1.8",
     "typescript": "*",
     "web-vitals": "^2.1.0"
   },
@@ -50,7 +51,7 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
-    "eslint-plugin-html": "^8.0.0",
+    "eslint-plugin-html": "^8.1.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-prettier": "^5.1.3",
